exports[`test A.js 1`] = `
"// @flow

class A {
  b: number;
  c: string;
}

module.exports = A;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
class A {
  b: number;
  c: string;
}
module.exports = A;
"
`;

exports[`test B.js 1`] = `
"// @flow
var A = require ('./A');
import type C from './C';

class B extends A {
  c: C;
}

module.exports = B;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var A = require("./A");
import type C from "./C";
class B extends A {
  c: C;
}
module.exports = B;
"
`;

exports[`test C.js 1`] = `
"// @flow
var A = require ('./A');
import type B from './B';

class C extends A {
  b: B;
}

module.exports = C;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
var A = require("./A");
import type B from "./B";
class C extends A {
  b: B;
}
module.exports = C;
"
`;
